--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "bootstrap": "^5.3.3",
+    "lucide-react": "^0.474.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.4",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-router-dom": "^7.1.4",
     "react-scripts": "5.0.1",
     "sass": "^1.59.2",
     "web-vitals": "^2.1.0"
