--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
     "sass": "^1.59.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yarn": "^1.22.22"
   },
   "scripts": {
     "start": "react-scripts start",
