--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "lucide-react": "^0.474.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.0.0",
+    "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^7.4.0",
+    "react-router-dom": "6.22.3",
     "react-scripts": "5.0.1",
     "sass": "^1.59.2",
     "web-vitals": "^2.1.0",
